--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
+    "prettier": "3.2.5",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
