--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.4",
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "react": "^18",
